 - Renamed output module to secureserv to fix load/unload issues (M)
 - Don't do onjoin checks for channels monitored via a monbot (F)
 - Don't lock a channel when its already locked (BugID: 45) (F)
 - Fixed missing fclose call in load_dat (M)
 - Added support for customviri.dat to allow local defintions that are not affected by viri.dat updates (M)
 - Changed SET LIST to output setting names rather than descriptions (M)
 - SecureServ will log positives and the action taken (M)
 
0.9.4 - Fish - 20 Aug, 2003
 - configure now checks for crypt.h (BugID: 37)
 - fixed bots del command crashing neo when not enough args supplied (BugID: 39)
 - fixed a stupid typo in helpers del command. Missing Nickname param. (BugID: 36)
 - Fixed a Doco typo with monbots command

0.9.3 - Fish - 07 June, 2003
 - Found a few bugs with nickflood detection thanks to the logs from -=OrPhEuS=-
 - added ident and host to akill message in #services chan.
 - Forgot to put in /help set akilltime
 - Kicks are now handled (Fixes that Hu, user isn't a part of xxx messages)
 - Notices are now processed by the bots
 - Check Exempts for PM's and Notices is now performed.
 - Akill times can be set larger than 10,000 seconds now BUGID: 31
 - Disabling Version check didn't actuall disable it. Fixed. BugID: 24
 - Moved is_pub_chan into NeoStats core, as there is more checking than I though. BugID: 33
 - Channel Locking is implemented
 - Added a feature to enable admins to edit the botlist online
 - Added the ability to assign bots to channels, to stay in there full time.
 - SecureServ supports the new API version interface, and __ModInit, __ModFini function calls of NeoStats
 - When a user joins a channel, user exemptions are checked as well as channel exemptions.
 - Helper interface added, and SVSJOIN code now works!
 - send an update when we get a positive to secure.irc-chat.net if we have an account 
 - Helpers are automatically logged out if they go away (configurable)