@@ -15,6 +15,7 @@ SecureServ Module for NeoStats Changelog.
  - Don't lock a channel when its already locked (BugID: 45) (F)
  - Fixed missing fclose call in load_dat (M)
  - Added support for customviri.dat to allow local defintions that are not affected by viri.dat updates (M)
+ - A check to see if we have bots for Onjoin Checking. Fix |VIO|Maveric problem (F)
  - Changed SET LIST to output setting names rather than descriptions (M)
  - SecureServ will log positives and the action taken (M)
  
